--- a/css/custom.css
+++ b/css/custom.css
@@ -134,6 +134,15 @@ input:not([type="checkbox"]):not([type="radio"]), select {
     font-family: poppins;
     font-weight: 400;
 }
+.slider-text.dark h2,
+.slider-text.dark p {
+    color:rgb(0, 0, 0);
+}
+
+.bg-white-9 {
+    background-color:rgba(255,255,255,0.9);
+}
+
 
 @media (max-width: 700px) {
     .slider-text {
