--- a/scss/base/_include.scss
+++ b/scss/base/_include.scss
@@ -29,7 +29,7 @@
 @import "blog";
 @import "comments";
 /*  Shop */
-//@import "shop";
+@import "shop";
 /*  Forum */
 //@import "forum";
 /*  Footer */
