--- a/scss/elements/_icon-boxes.scss
+++ b/scss/elements/_icon-boxes.scss
@@ -32,6 +32,9 @@ div.icon-box:before {
         width: 100%;
         height: 100%;
         color: #333;
+        :hover{
+            color:RED;
+        }
     }
 
     h3,
