--- a/scss/base/_blog.scss
+++ b/scss/base/_blog.scss
@@ -13,7 +13,7 @@
     }
 
     img {
-        width: 100%;
+        // width: 100%;
         height: auto;
     }
 
@@ -234,7 +234,7 @@
 
         /*padding: 0 0 20px 0;*/
         img {
-            width: 100%;
+            // width: 100%;
             height: auto;
         }
 
